--- a/.github/workflows/manual-run-pipeline.yml
+++ b/.github/workflows/manual-run-pipeline.yml
@@ -1,31 +1,38 @@
 name: Manual Test Run
 
 on:
-    workflow_dispatch:
+    workflow_dispatch: # Этот триггер позволяет запускать пайплайн вручную
 
 jobs: 
     run-tests:
         runs-on: ubuntu-latest
+        # Шаг 1: Клонирование репозитория
         steps:
             - uses: actions/checkout@v4
 
+            # Шаг 2: Установка Node.js
             - name: Set up Node.js
               uses: actions/setup-node@v4
               with:
                 node-version: '22.x'
 
+            # Шаг 3: Установка зависимостей
             - name: Install dependencies
               run: npm install
 
+            # Шаг 4: Установка браузеров Playwright
             - name: Install Playwright Browsers
               run: npx playwright install --with-deps
 
+            # Шаг 5: Запуск UI тестов
             - name: Run UI tests
               run: npm run tests:ui
 
+            # Шаг 6: Запуск API тестов
             - name: Run API tests
               run: npm run tests:api
 
+            # Шаг 7: Загрузка отчетов (Artifacts)
             - name: Upload test report
               if: always()
               uses: actions/upload-artifact@v4
